ping/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping
spec:
  rules:
    - host: ping.dev.local
